# django-tailwind-config

./: LICENSE  MANIFEST.in  README.md  django_notes.md  main.py  notes.md  pyproject.toml  requirements.txt  settings.py  testing.py
files/: .gitignore  README.md  settings.py  urls.py
src/django_tailwind_config/: __main__.py  main.py
